--- a/stly.css
+++ b/stly.css
@@ -18,9 +18,11 @@
         }
 
         .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 20px;
+            width: 90%;
+            max-width: 1200px; 
+            margin: auto;
+            
+
         }
 
         header {
